# tonic_example

./: Cargo.toml  README.md  build.rs
proto/: file_transfer.proto
proto/output/: file_transfer.rs
src/: client.rs  proto_build.rs  server.rs
streaming/: Cargo.toml  build.rs
streaming/proto/: number_stream.proto
streaming/proto/output/: number_stream.rs
streaming/src/: client.rs  server.rs
streaming_bidirectional/: Cargo.toml  build.rs
streaming_bidirectional/proto/: bi_stream.proto  text_into_server.proto  text_out_of_server.proto
streaming_bidirectional/src/: client.rs  server.rs
